trained models, and did feature importance analysis

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "5da22847",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "4                  College               Near  Female          70  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "3c2a73a2",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "c08863da",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "9f199889",
    "metadata": {},
    "outputs": [
@@ -390,22 +390,22 @@
      "data": {
       "text/plain": [
        "Target\n",
-       "Medium    6491\n",
-       "Bad         68\n",
-       "Good        48\n",
+       "Medium    3530\n",
+       "Good      1625\n",
+       "Bad       1452\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def score_to_class(score):\n",
-    "    if score < 60:\n",
+    "    if score < 65:\n",
     "        return \"Bad\"\n",
-    "    elif score < 80:\n",
+    "    elif score < 70:\n",
     "        return \"Medium\"\n",
     "    else:\n",
     "        return \"Good\"\n",
@@ -429,17 +429,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "f77604f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One-hot encode categorical variables\n",
-    "df_encoded = pd.get_dummies(df.drop([\"Exam_Score\"], axis=1), drop_first=True)\n",
+    "# # One-hot encode categorical variables\n",
+    "# df_encoded = pd.get_dummies(df.drop([\"Exam_Score\"], axis=1), drop_first=True)\n",
     "\n",
-    "# Map target to numeric\n",
+    "# # Map target to numeric\n",
+    "# target_map = {\"Bad\": 0, \"Medium\": 1, \"Good\": 2}\n",
+    "# df_encoded[\"Target\"] = df[\"Target\"].map(target_map)\n",
+    "\n",
+    "# 1. Lag target-variabelen som beskrevet\n",
+    "df[\"Target\"] = df[\"Exam_Score\"].apply(score_to_class)\n",
+    "\n",
+    "# 2. Lag en kopi uten 'Exam_Score' og 'Target'\n",
+    "X = df.drop([\"Exam_Score\", \"Target\"], axis=1)\n",
+    "\n",
+    "# 3. One-hot encode kun input/feature-kolonnene\n",
+    "X_encoded = pd.get_dummies(X, drop_first=True)\n",
+    "\n",
+    "# 4. Lag target-array (numeric)\n",
     "target_map = {\"Bad\": 0, \"Medium\": 1, \"Good\": 2}\n",
-    "df_encoded[\"Target\"] = df[\"Target\"].map(target_map)"
+    "y = df[\"Target\"].map(target_map)\n",
+    "\n",
+    "# 5. Kombiner om ønskelig\n",
+    "df_encoded = X_encoded.copy()\n",
+    "df_encoded[\"Target\"] = y\n"
    ]
   },
   {
@@ -461,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "cc1b0fef",
    "metadata": {},
    "outputs": [],
@@ -493,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "3c18ca4f",
    "metadata": {},
    "outputs": [
@@ -501,7 +518,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train size: (3963, 30), Val size: (1322, 30), Test size: (1322, 30)\n"
+      "Train size: (3963, 28), Val size: (1322, 28), Test size: (1322, 28)\n"
      ]
     }
    ],
@@ -524,6 +541,30 @@
     "\n",
     "print(f\"Train size: {train.shape}, Val size: {val.shape}, Test size: {test.shape}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3723a2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3e4769d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02cae244",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -542,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
